hphp/hack/test/typecheck/switch_redundant_default.php.exp
File "switch_redundant_default.php", line 9, characters 11-12:
All cases already covered; a redundant `default` case prevents detecting future errors. If your goal is to guard against invalid values for this type, do an `is` check before the switch. (Typing[4022])
  File "switch_redundant_default.php", line 3, characters 6-6:
  Enum declared here
